<resources>
    <string name="app_name">P05-Quiz</string>
    <string name="ticketType">Ticket Type</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="pax">Number of pax</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="submit">Submit</string>
    <string name="one">1</string>
</resources>
